--- a/public/css/output.css
+++ b/public/css/output.css
@@ -3747,10 +3747,6 @@ details.collapse summary::-webkit-details-marker {
   margin-top: 1rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
 .mt-8 {
   margin-top: 2rem;
 }
@@ -4022,6 +4018,10 @@ details.collapse summary::-webkit-details-marker {
   overflow: visible;
 }
 
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -4032,10 +4032,6 @@ details.collapse summary::-webkit-details-marker {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .rounded-e-lg {
@@ -4171,12 +4167,12 @@ details.collapse summary::-webkit-details-marker {
   background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-tr {
-  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .from-pink-200 {
@@ -4185,9 +4181,21 @@ details.collapse summary::-webkit-details-marker {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-pink-400 {
-  --tw-gradient-from: #F17EB8 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(241 126 184 / 0) var(--tw-gradient-to-position);
+.from-pink-300 {
+  --tw-gradient-from: #F8B4D9 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(248 180 217 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-purple-300 {
+  --tw-gradient-from: #CABFFD var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(202 191 253 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-white {
+  --tw-gradient-from: #ffffff var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -4197,9 +4205,9 @@ details.collapse summary::-webkit-details-marker {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-white {
-  --tw-gradient-from: #ffffff var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+.from-pink-400 {
+  --tw-gradient-from: #F17EB8 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(241 126 184 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -4215,8 +4223,8 @@ details.collapse summary::-webkit-details-marker {
   --tw-gradient-to: #7E3AF2 var(--tw-gradient-to-position);
 }
 
-.to-purple-900 {
-  --tw-gradient-to: #4A1D96 var(--tw-gradient-to-position);
+.to-purple-800 {
+  --tw-gradient-to: #5521B5 var(--tw-gradient-to-position);
 }
 
 .bg-clip-text {
@@ -4537,8 +4545,20 @@ details.collapse summary::-webkit-details-marker {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
+.text-shadow-sm {
+  text-shadow: 1px 1px 3px rgb(36 37 47 / 25%);
+}
+
 .text-shadow-md {
   text-shadow: 0px 1px 2px rgb(30 29 39 / 19%), 1px 2px 4px rgb(54 64 147 / 18%);
+}
+
+.text-shadow-lg {
+  text-shadow: 3px 3px 6px rgb(0 0 0 / 26%), 0 0 5px rgb(15 3 86 / 22%);
+}
+
+.text-shadow-xl {
+  text-shadow: 1px 1px 3px rgb(0 0 0 / 29%), 2px 4px 7px rgb(73 64 125 / 35%);
 }
 
 .text-shadow-none {
@@ -4569,11 +4589,15 @@ details.collapse summary::-webkit-details-marker {
 }
 
 .shadowColor{
-  text-shadow: 1px 1px 1px rgba(10, 10, 10, 0.108);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.052);
 }
 
 .shadowColor2{
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.147);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.112);
+}
+
+.sombraBoton{
+  filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.316));
 }
 
 .hover\:scale-105:hover {
