--- a/public/css/output.css
+++ b/public/css/output.css
@@ -3758,6 +3758,10 @@ details.collapse summary::-webkit-details-marker {
   z-index: 50;
 }
 
+.z-0 {
+  z-index: 0;
+}
+
 .m-2 {
   margin: 0.5rem;
 }
@@ -4263,6 +4267,14 @@ details.collapse summary::-webkit-details-marker {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
+.bg-gradient-to-l {
+  background-image: linear-gradient(to left, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
 .from-pink-200 {
   --tw-gradient-from: #FAD1E8 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(250 209 232 / 0) var(--tw-gradient-to-position);
@@ -4299,6 +4311,18 @@ details.collapse summary::-webkit-details-marker {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-purple-200 {
+  --tw-gradient-from: #DCD7FE var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(220 215 254 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-purple-700 {
+  --tw-gradient-from: #6C2BD9 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(108 43 217 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-pink-200 {
   --tw-gradient-to: #FAD1E8 var(--tw-gradient-to-position);
 }
@@ -4313,6 +4337,18 @@ details.collapse summary::-webkit-details-marker {
 
 .to-purple-800 {
   --tw-gradient-to: #5521B5 var(--tw-gradient-to-position);
+}
+
+.to-pink-900 {
+  --tw-gradient-to: #751A3D var(--tw-gradient-to-position);
+}
+
+.to-purple-900 {
+  --tw-gradient-to: #4A1D96 var(--tw-gradient-to-position);
+}
+
+.to-purple-950 {
+  --tw-gradient-to: #3b0764 var(--tw-gradient-to-position);
 }
 
 .bg-clip-text {
@@ -4596,6 +4632,46 @@ details.collapse summary::-webkit-details-marker {
 
 .opacity-100 {
   opacity: 1;
+}
+
+.opacity-50 {
+  opacity: 0.5;
+}
+
+.opacity-20 {
+  opacity: 0.2;
+}
+
+.opacity-30 {
+  opacity: 0.3;
+}
+
+.opacity-10 {
+  opacity: 0.1;
+}
+
+.opacity-40 {
+  opacity: 0.4;
+}
+
+.opacity-90 {
+  opacity: 0.9;
+}
+
+.opacity-35 {
+  opacity: 0.35;
+}
+
+.opacity-25 {
+  opacity: 0.25;
+}
+
+.opacity-15 {
+  opacity: 0.15;
+}
+
+.opacity-60 {
+  opacity: 0.6;
 }
 
 .shadow {
@@ -5057,6 +5133,10 @@ details.collapse summary::-webkit-details-marker {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+
+  .sm\:opacity-15 {
+    opacity: 0.15;
+  }
 }
 
 @media (min-width: 768px) {
@@ -5175,6 +5255,18 @@ details.collapse summary::-webkit-details-marker {
     line-height: 1.25rem;
   }
 
+  .md\:opacity-15 {
+    opacity: 0.15;
+  }
+
+  .md\:opacity-90 {
+    opacity: 0.9;
+  }
+
+  .md\:opacity-20 {
+    opacity: 0.2;
+  }
+
   .md\:shadow-none {
     --tw-shadow: 0 0 #0000;
     --tw-shadow-colored: 0 0 #0000;
@@ -5205,6 +5297,10 @@ details.collapse summary::-webkit-details-marker {
   .lg\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .lg\:opacity-15 {
+    opacity: 0.15;
   }
 }
 
@@ -5278,6 +5374,10 @@ details.collapse summary::-webkit-details-marker {
     background-image: none;
   }
 
+  .xl\:bg-gradient-to-t {
+    background-image: linear-gradient(to top, var(--tw-gradient-stops));
+  }
+
   .xl\:p-2 {
     padding: 0.5rem;
   }
@@ -5304,6 +5404,26 @@ details.collapse summary::-webkit-details-marker {
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .xl\:opacity-15 {
+    opacity: 0.15;
+  }
+
+  .xl\:opacity-30 {
+    opacity: 0.3;
+  }
+
+  .xl\:opacity-0 {
+    opacity: 0;
+  }
+
+  .xl\:opacity-20 {
+    opacity: 0.2;
+  }
+
+  .xl\:opacity-90 {
+    opacity: 0.9;
   }
 
   .xl\:shadow-none {
