--- a/public/css/output.css
+++ b/public/css/output.css
@@ -4457,18 +4457,6 @@ details.collapse summary::-webkit-details-marker {
   opacity: 1;
 }
 
-.opacity-30 {
-  opacity: 0.3;
-}
-
-.opacity-25 {
-  opacity: 0.25;
-}
-
-.opacity-10 {
-  opacity: 0.1;
-}
-
 .opacity-20 {
   opacity: 0.2;
 }
@@ -4608,11 +4596,11 @@ details.collapse summary::-webkit-details-marker {
 }
 
 .shadowColor{
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.052);
+  filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.262));
 }
 
 .shadowColor2{
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.112);
+  filter: drop-shadow(2px 2px 10px rgba(255, 255, 255, 0.371));
 }
 
 .sombraBoton{
@@ -4951,10 +4939,6 @@ details.collapse summary::-webkit-details-marker {
     line-height: 1.25rem;
   }
 
-  .md\:opacity-20 {
-    opacity: 0.2;
-  }
-
   .md\:shadow-none {
     --tw-shadow: 0 0 #0000;
     --tw-shadow-colored: 0 0 #0000;
@@ -5068,10 +5052,6 @@ details.collapse summary::-webkit-details-marker {
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .xl\:opacity-20 {
-    opacity: 0.2;
   }
 
   .xl\:shadow-none {
