--- a/src/css/input.css
+++ b/src/css/input.css
@@ -15,11 +15,11 @@
 }
 
 .shadowColor{
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.052);
+    filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.262));
 }
 
 .shadowColor2{
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.112);
+    filter: drop-shadow(2px 2px 10px rgba(255, 255, 255, 0.371));
 }
 
 .sombraBoton{
