--- a/public/css/output.css
+++ b/public/css/output.css
@@ -4189,12 +4189,6 @@ details.collapse summary::-webkit-details-marker {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-pink-300 {
-  --tw-gradient-from: #F8B4D9 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(248 180 217 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .from-purple-400 {
   --tw-gradient-from: #AC94FA var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(172 148 250 / 0) var(--tw-gradient-to-position);
@@ -4207,8 +4201,8 @@ details.collapse summary::-webkit-details-marker {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-pink-200 {
-  --tw-gradient-to: #FAD1E8 var(--tw-gradient-to-position);
+.to-pink-400 {
+  --tw-gradient-to: #F17EB8 var(--tw-gradient-to-position);
 }
 
 .to-purple-600 {
@@ -4596,11 +4590,11 @@ details.collapse summary::-webkit-details-marker {
 }
 
 .shadowColor{
-  filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.262));
+  filter: drop-shadow(1px 1px 0px rgba(0, 0, 0, 0.163));
 }
 
 .shadowColor2{
-  filter: drop-shadow(2px 2px 10px rgba(255, 255, 255, 0.371));
+  filter: drop-shadow(2px 2px 5px rgba(255, 255, 255, 0.201));
 }
 
 .sombraBoton{
