--- a/public/css/output.css
+++ b/public/css/output.css
@@ -4312,6 +4312,11 @@ details.collapse summary::-webkit-details-marker {
   font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -4340,11 +4345,6 @@ details.collapse summary::-webkit-details-marker {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .font-bold {
@@ -4454,22 +4454,6 @@ details.collapse summary::-webkit-details-marker {
 
 .opacity-20 {
   opacity: 0.2;
-}
-
-.opacity-30 {
-  opacity: 0.3;
-}
-
-.opacity-25 {
-  opacity: 0.25;
-}
-
-.opacity-10 {
-  opacity: 0.1;
-}
-
-.opacity-15 {
-  opacity: 0.15;
 }
 
 .shadow {
@@ -4644,6 +4628,17 @@ details.collapse summary::-webkit-details-marker {
   background: linear-gradient(35deg, rgb(255, 255, 255) 0%, rgb(255, 145, 207) 100%);
   background-size: 400% 400%;
   animation: gradientAnimation 2s ease-in infinite;
+}
+
+a.activo .borde {
+  width: 100%;
+  left: 0;
+}
+
+a .borde {
+  width: 0;
+  left: 50%;
+  transition: width 0.5s ease-in-out, left 0.5s ease-in-out;
 }
 
 .hover\:scale-105:hover {
@@ -4989,10 +4984,6 @@ details.collapse summary::-webkit-details-marker {
     line-height: 1.25rem;
   }
 
-  .md\:opacity-15 {
-    opacity: 0.15;
-  }
-
   .md\:opacity-10 {
     opacity: 0.1;
   }
@@ -5133,32 +5124,8 @@ details.collapse summary::-webkit-details-marker {
     line-height: 1.75rem;
   }
 
-  .xl\:opacity-15 {
-    opacity: 0.15;
-  }
-
-  .xl\:opacity-30 {
-    opacity: 0.3;
-  }
-
-  .xl\:opacity-35 {
-    opacity: 0.35;
-  }
-
-  .xl\:opacity-50 {
-    opacity: 0.5;
-  }
-
   .xl\:opacity-10 {
     opacity: 0.1;
-  }
-
-  .xl\:opacity-0 {
-    opacity: 0;
-  }
-
-  .xl\:opacity-20 {
-    opacity: 0.2;
   }
 
   .xl\:shadow-none {
