--- a/src/css/input.css
+++ b/src/css/input.css
@@ -44,3 +44,14 @@
     background-size: 400% 400%;
     animation: gradientAnimation 2s ease-in infinite;
 }
+
+a.activo .borde {
+    width: 100%; 
+    left: 0; 
+}
+
+a .borde {
+    width: 0;
+    left: 50%;
+    transition: width 0.5s ease-in-out, left 0.5s ease-in-out;
+}
