--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1956,19 +1956,6 @@ input:checked + .toggle-bg {
   scrollbar-gutter: stable;
 }
 
-.navbar {
-  display: flex;
-  align-items: center;
-  padding: var(--navbar-padding, 0.5rem);
-  min-height: 4rem;
-  width: 100%;
-}
-
-:where(.navbar > *:not(script, style)) {
-  display: inline-flex;
-  align-items: center;
-}
-
 .radio {
   flex-shrink: 0;
   --chkbg: var(--bc);
@@ -3751,12 +3738,12 @@ details.collapse summary::-webkit-details-marker {
   margin-top: 0.5rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .block {
@@ -4183,10 +4170,6 @@ details.collapse summary::-webkit-details-marker {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
 .from-pink-200 {
   --tw-gradient-from: #FAD1E8 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(250 209 232 / 0) var(--tw-gradient-to-position);
@@ -4196,12 +4179,6 @@ details.collapse summary::-webkit-details-marker {
 .from-purple-300 {
   --tw-gradient-from: #CABFFD var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(202 191 253 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-purple-400 {
-  --tw-gradient-from: #AC94FA var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(172 148 250 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -4217,10 +4194,6 @@ details.collapse summary::-webkit-details-marker {
 
 .to-purple-800 {
   --tw-gradient-to: #5521B5 var(--tw-gradient-to-position);
-}
-
-.to-purple-950 {
-  --tw-gradient-to: #3b0764 var(--tw-gradient-to-position);
 }
 
 .bg-clip-text {
@@ -4262,6 +4235,11 @@ details.collapse summary::-webkit-details-marker {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-5 {
@@ -4312,9 +4290,9 @@ details.collapse summary::-webkit-details-marker {
   font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-5xl {
@@ -4598,7 +4576,7 @@ details.collapse summary::-webkit-details-marker {
 }
 
 .shadowColor{
-  filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.163));
+  filter: drop-shadow(1px 1px 0px rgba(0, 0, 0, 0.279));
 }
 
 .shadowColor2{
@@ -4639,6 +4617,297 @@ a .borde {
   width: 0;
   left: 50%;
   transition: width 0.5s ease-in-out, left 0.5s ease-in-out;
+}
+
+.fondoGradiente {
+  --x-0: 82%;
+  --y-0: 1%;
+  --c-0: hsla(249, 53%, 89%, 0);
+  --c-1: hsl(270, 92%, 71%);
+  --y-1: 0%;
+  --x-1: 0%;
+  --c-2: hsl(0, 0%, 100%);
+  --x-2: 92%;
+  --y-2: 11%;
+  --x-3: 86%;
+  --c-3: hsla(335, 92%, 86%, 0);
+  --y-3: 15%;
+  --x-4: 50%;
+  --y-4: 67%;
+  --c-4: hsla(247, 58%, 97%, 0);
+  background-color: hsla(277, 100%, 50%, 0.751);
+  background-image: radial-gradient(circle at var(--x-0) var(--y-0), var(--c-0) var(--s-start-0), transparent var(--s-end-0)), radial-gradient(circle at var(--x-1) var(--y-1), var(--c-1) var(--s-start-1), transparent var(--s-end-1)), radial-gradient(circle at var(--x-2) var(--y-2), var(--c-2) var(--s-start-2), transparent var(--s-end-2)), radial-gradient(circle at var(--x-3) var(--y-3), var(--c-3) var(--s-start-3), transparent var(--s-end-3)), radial-gradient(circle at var(--x-4) var(--y-4), var(--c-4) var(--s-start-4), transparent var(--s-end-4));
+  animation: hero-gradient-animation 10s linear infinite alternate;
+  background-blend-mode: normal, normal, normal, normal, normal;
+}
+
+@keyframes hero-gradient-animation{
+  0%{
+    --x-0:82%;
+    --y-0:1%;
+    --s-start-0:1%;
+    --s-end-0:85%;
+    --c-0:hsla(249,53%,89%,0);
+    --s-start-1:11%;
+    --s-end-1:54.91369993085501%;
+    --c-1:hsla(270,95%,75%,0.96);
+    --y-1:0%;
+    --x-1:0%;
+    --x-3:86%;
+    --c-3:hsla(335,92%,86%,0);
+    --y-3:15%;
+    --s-start-3:19%;
+    --s-end-3:52%;
+    --x-4:50%;
+    --s-start-4:20%;
+    --s-end-4:52%;
+    --y-4:67%;
+    --c-4:hsla(247,58%,97%,0);
+  }
+
+  100%{
+    --x-0:48%;
+    --y-0:7%;
+    --s-start-0:15%;
+    --s-end-0:54%;
+    --c-0:hsla(230,97%,93%,0);
+    --s-start-1:6.243780609158845%;
+    --s-end-1:99.10895305701352%;
+    --c-1:hsla(229,86%,98%,1);
+    --y-1:53%;
+    --x-1:47%;
+    --x-3:6%;
+    --c-3:hsla(352,97%,65%,0);
+    --y-3:75%;
+    --s-start-3:6%;
+    --s-end-3:73%;
+    --x-4:64%;
+    --s-start-4:14%;
+    --s-end-4:88%;
+    --y-4:47%;
+    --c-4:hsla(352,70%,92%,0);
+  }
+}
+
+@property --x-0{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:82%
+}
+
+@property --y-0{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:1%
+}
+
+@property --s-start-0{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:1%
+}
+
+@property --s-end-0{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:85%
+}
+
+@property --c-0{
+  syntax:'<color>';
+
+  inherits:false;
+
+  initial-value:hsla(249,53%,89%,0)
+}
+
+@property --s-start-1{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:11%
+}
+
+@property --s-end-1{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:54.91369993085501%
+}
+
+@property --c-1{
+  syntax:'<color>';
+
+  inherits:false;
+
+  initial-value:hsla(270,95%,75%,0.96)
+}
+
+@property --y-1{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:0%
+}
+
+@property --x-1{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:0%
+}
+
+@property --s-start-2{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:12%
+}
+
+@property --s-end-2{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:69%
+}
+
+@property --c-2{
+  syntax:'<color>';
+
+  inherits:false;
+
+  initial-value:hsla(291,59%,66%,0.94)
+}
+
+@property --x-2{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:92%
+}
+
+@property --y-2{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:11%
+}
+
+@property --x-3{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:86%
+}
+
+@property --c-3{
+  syntax:'<color>';
+
+  inherits:false;
+
+  initial-value:hsla(335,92%,86%,0)
+}
+
+@property --y-3{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:15%
+}
+
+@property --s-start-3{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:19%
+}
+
+@property --s-end-3{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:52%
+}
+
+@property --x-4{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:50%
+}
+
+@property --s-start-4{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:20%
+}
+
+@property --s-end-4{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:52%
+}
+
+@property --y-4{
+  syntax:'<percentage>';
+
+  inherits:false;
+
+  initial-value:67%
+}
+
+@property --c-4{
+  syntax:'<color>';
+
+  inherits:false;
+
+  initial-value:hsla(247,58%,97%,0)
+}
+
+.your_css_selector_here{
+  --x-0:82%;
+  --y-0:1%;
+  --c-0:hsla(249,53%,89%,0);
+  --c-1:hsla(270,95%,75%,0.96);
+  --y-1:0%;
+  --x-1:0%;
+  --c-2:hsla(291,59%,66%,0.94);
+  --x-2:92%;
+  --y-2:11%;
+  --x-3:86%;
+  --c-3:hsla(335,92%,86%,0);
+  --y-3:15%;
+  --x-4:50%;
+  --y-4:67%;
+  --c-4:hsla(247,58%,97%,0);;background-color:hsla(273,98%,79%,0.96);
+  background-image:radial-gradient(circle at var(--x-0) var(--y-0), var(--c-0) var(--s-start-0),transparent var(--s-end-0)),radial-gradient(circle at var(--x-1) var(--y-1), var(--c-1) var(--s-start-1),transparent var(--s-end-1)),radial-gradient(circle at var(--x-2) var(--y-2), var(--c-2) var(--s-start-2),transparent var(--s-end-2)),radial-gradient(circle at var(--x-3) var(--y-3), var(--c-3) var(--s-start-3),transparent var(--s-end-3)),radial-gradient(circle at var(--x-4) var(--y-4), var(--c-4) var(--s-start-4),transparent var(--s-end-4));
+  animation:hero-gradient-animation 10s linear infinite alternate;
+  background-blend-mode:normal,normal,normal,normal,normal;
 }
 
 .hover\:scale-105:hover {
@@ -4969,9 +5238,9 @@ a .borde {
     line-height: 2rem;
   }
 
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .md\:text-lg {
@@ -4984,8 +5253,8 @@ a .borde {
     line-height: 1.25rem;
   }
 
-  .md\:opacity-10 {
-    opacity: 0.1;
+  .md\:opacity-25 {
+    opacity: 0.25;
   }
 
   .md\:shadow-none {
@@ -5124,8 +5393,8 @@ a .borde {
     line-height: 1.75rem;
   }
 
-  .xl\:opacity-10 {
-    opacity: 0.1;
+  .xl\:opacity-25 {
+    opacity: 0.25;
   }
 
   .xl\:shadow-none {
