--- a/public/css/output.css
+++ b/public/css/output.css
@@ -3863,6 +3863,14 @@ details.collapse summary::-webkit-details-marker {
   width: 100%;
 }
 
+.w-auto {
+  width: auto;
+}
+
+.min-w-full {
+  min-width: 100%;
+}
+
 .max-w-fit {
   max-width: -moz-fit-content;
   max-width: fit-content;
@@ -4162,12 +4170,28 @@ details.collapse summary::-webkit-details-marker {
   --tw-bg-opacity: 0.9;
 }
 
+.bg-opacity-70 {
+  --tw-bg-opacity: 0.7;
+}
+
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-bl {
+  background-image: linear-gradient(to bottom left, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
 .from-pink-200 {
@@ -4188,12 +4212,50 @@ details.collapse summary::-webkit-details-marker {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-pink-100 {
+  --tw-gradient-from: #FCE8F3 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(252 232 243 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-purple-600 {
   --tw-gradient-to: #7E3AF2 var(--tw-gradient-to-position);
 }
 
 .to-purple-800 {
   --tw-gradient-to: #5521B5 var(--tw-gradient-to-position);
+}
+
+.to-purple-900 {
+  --tw-gradient-to: #4A1D96 var(--tw-gradient-to-position);
+}
+
+.to-purple-950 {
+  --tw-gradient-to: #3b0764 var(--tw-gradient-to-position);
+}
+
+.to-purple-700 {
+  --tw-gradient-to: #6C2BD9 var(--tw-gradient-to-position);
+}
+
+.to-pink-300 {
+  --tw-gradient-to: #F8B4D9 var(--tw-gradient-to-position);
+}
+
+.to-pink-500 {
+  --tw-gradient-to: #E74694 var(--tw-gradient-to-position);
+}
+
+.to-pink-400 {
+  --tw-gradient-to: #F17EB8 var(--tw-gradient-to-position);
+}
+
+.to-purple-400 {
+  --tw-gradient-to: #AC94FA var(--tw-gradient-to-position);
+}
+
+.to-purple-300 {
+  --tw-gradient-to: #CABFFD var(--tw-gradient-to-position);
 }
 
 .bg-clip-text {
@@ -4552,6 +4614,10 @@ details.collapse summary::-webkit-details-marker {
   text-shadow: 0px 1px 2px rgb(30 29 39 / 19%), 1px 2px 4px rgb(54 64 147 / 18%);
 }
 
+.text-shadow-lg {
+  text-shadow: 3px 3px 6px rgb(0 0 0 / 26%), 0 0 5px rgb(15 3 86 / 22%);
+}
+
 .slide {
   position: absolute;
   inset: 0px;
@@ -4602,7 +4668,7 @@ details.collapse summary::-webkit-details-marker {
 }
 
 .animated-gradient {
-  background: rgb(245, 99, 255);
+  background: rgb(233, 110, 252);
   background: linear-gradient(35deg, rgb(255, 255, 255) 0%, rgb(255, 145, 207) 100%);
   background-size: 400% 400%;
   animation: gradientAnimation 2s ease-in infinite;
