--- a/public/css/output.css
+++ b/public/css/output.css
@@ -4180,6 +4180,12 @@ details.collapse summary::-webkit-details-marker {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-pink-100 {
+  --tw-gradient-from: #FCE8F3 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(252 232 243 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-purple-400 {
   --tw-gradient-to: #AC94FA var(--tw-gradient-to-position);
 }
@@ -4194,6 +4200,10 @@ details.collapse summary::-webkit-details-marker {
 
 .to-purple-800 {
   --tw-gradient-to: #5521B5 var(--tw-gradient-to-position);
+}
+
+.to-purple-300 {
+  --tw-gradient-to: #CABFFD var(--tw-gradient-to-position);
 }
 
 .bg-clip-text {
